enumcapsulate/tests/expand-macros/as_variant_mut/fail/enum/tuple_variants/no_fields.err.txt
error: proc-macro derive panicked
 --> /tests/expand-macros/as_variant_mut/fail/enum/tuple_variants/no_fields.rs:5:10
  |
5 | #[derive(AsVariantMut)]
  |          ^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with single-element tuple variants can use this derive")
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
